[package]
name = "ohpc-log-analyzer"
version = "1.0.5"
edition = "2021"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.3.24", features = ["derive"] }
console = "0.16.1"
indicatif = "0.18.3"
maxminddb = "0.27.0"
plotly =  { version = "0.8.4", features = ["kaleido"] }
rayon = "1.11.0"
regex = "1.12.2"
serde = "1.0.228"
rustc-hash = "2.1"
serde_json = "1.0.145"
