[package]
name = "ohpc-log-analyzer"
version = "1.0.5"
edition = "2021"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.3.24", features = ["derive"] }
console = "0.16.2"
indicatif = "0.18.4"
maxminddb = "0.27.3"
plotly = { version = "0.14", features = ["kaleido"] }
rayon = "1.11.0"
regex = "1.12.3"
serde = "1.0.228"
rustc-hash = "2.1"
serde_json = "1.0.149"
time = "0.3"
